Bug 1684912 - Call a handler in case a corrupted database file was detected. r=dom-workers-and-storage-reviewers,janv

The handler is called before opening the connection again. This does not restore
the behaviour before Bug 1684912 exactly. In case removal of the usage or database
file fails, the handler will not be called. Also, the handler can no longer fail,
which simplifies the control flow.

Differential Revision: https://phabricator.services.mozilla.com/D100761